Cause numeric and money columns to be right aligned in RowRenderers Several bugfixes in metadata related code, where improper data was passed causing all kinds of display problems.

--- a/to.etc.domui/src/resources/themes/blue/style.css
+++ b/to.etc.domui/src/resources/themes/blue/style.css
@@ -433,6 +433,11 @@ table.ui-lui {
 	font-family: verdana, tahoma, helvetica, sans-serif;
 	vertical-align: top;
 }
+
+.ui-numeric {
+	text-align: right;
+}
+
 /* Display-only field */
 .ui-f-display {
 	font-size: 11px; /* FIXME: viewpoint uses PIXEL sizing!? */
